--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,7 +11,8 @@
 }
 
 html, body{
-    background-color:#0000FF;
+    background-image: linear-gradient(to top,#000C66, 
+    #000C66, #0000FF);
     height: 100vh;
     width: 100vw;
 }
@@ -33,6 +34,8 @@ section#login{
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px black;
+
+    transition: width 0.5s, height 0.5s;
     
 }
 
