--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -42,4 +42,14 @@
         float: right;
         width: 60%;
     }
+
+    div#formulario > h1{
+       font-size: 2em;
+    
+    }
+    
+
+    div#formulario > p{
+        font-size: 1.2em;
+    }
 }
