--- a/estilos/style.css
+++ b/estilos/style.css
@@ -61,3 +61,47 @@ div#formulario > h1{
 div#formulario > p{
     font-size: 0.8em;
 }
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:rgb(0, 0, 250);
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+   
+}
+
+form > input[type=submit]:hover{
+    background-color:rgb(0, 4, 130);
+    font-size: 1.1em;
+    transition: 0.3s;
+}
+
+form >a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    background-color: rgb(0, 0, 250);
+    color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    text-decoration: none;
+    
+}
+
+form >a.botao > i{
+    font-size: 0.8em;
+    
+}
+
+form > a.botao:hover{
+    background-color:rgb(0, 4, 130);
+    font-size: 1.1em;
+    transition: 0.3s;
+}
