--- a/estilos/style.css
+++ b/estilos/style.css
@@ -62,6 +62,15 @@ div#formulario > p{
     font-size: 0.8em;
 }
 
+form > div.campo{
+    height: 40px;
+    margin: 5px 0px;
+}
+
+form label{
+    display:none;
+}
+
 form > input[type=submit]{
     display: block;
     font-size: 1em;
