--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,7 @@ main{
 section#login{
     background-color: aliceblue;
     width: 250px;
-    height: 500px;
+    height: 525px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px black;
@@ -60,6 +60,7 @@ div#formulario > h1{
 
 div#formulario > p{
     font-size: 0.8em;
+    margin-top: 10px;
 }
 
 form > div.campo{
