--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -9,10 +9,14 @@
 
     section#login{
         display: block;
-        
         width: 80vw;
-        height: 50%;
+        height: 100%;
         
+    }
+
+    form > div.campo{
+        height: 40px;
+        margin: 5px 0px;
     }
 
     section#login > div#imagem{
@@ -44,6 +48,10 @@
         height: 100%;
     }
 
+    form > div.campo{
+        height: 40px;
+        margin: 5px 0px;
+    }
 
     div.campo > input{      
         border: 2px solid black;
